[FIX] sap.ui.table.Table: resize bar not visible in RTL mode
BCP: 1680271263
CR-Id: 012006153200001466642016

--- a/src/sap.ui.table/src/sap/ui/table/themes/base/Table.less
+++ b/src/sap.ui.table/src/sap/ui/table/themes/base/Table.less
@@ -555,6 +555,8 @@ html[data-sap-ui-browser^="ed"] .sapUiTableCtrlEmpty:focus:before {
 
 html[dir=rtl] .sapUiTableColRsz {
 	margin-right: -3px;
+	right: -5px;
+	left: auto;
 }
 
 .sapUiTableHScr .sapUiTableColRsz {
